@@ -1,3 +1,6 @@
+Oct 12, 2022
+  BulkGeneRename: updated to rename a batch of trna genes
+
 Aug 12, 2022
   BulkGeneRename: implemented dry-run mode
 
